# vedio_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  新建 Microsoft Visio Drawing.vsdx
cmake/: module.cmake  module_qt.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/clience/: CMakeLists.txt  httpclient.cpp  httpclient.h  main.cpp  mediayplayerwidget.cpp  mediayplayerwidget.h  mediayplayerwidget.ui
src/app/ffmpegstreamer/: CMakeLists.txt  main.cpp
src/app/mediaServer/: CMakeLists.txt  DynamicRTSPServer.cpp  httpfileserver.cpp  httpfileserver.h  live555MediaServer.cpp
src/app/rtspserver/: CMakeLists.txt  DynamicRTSPServer.cpp  ffmpeg_aac_server_media_subsession.cpp  ffmpeg_demux.cpp  ffmpeg_demux.h  ffmpeg_demuxed_elementary_stream.cpp  ffmpeg_h264_server_media_subsession.cpp  ffmpeg_h264_server_media_subsession.h  ffmpeg_media.h  ffmpeg_mpeg4_server_media_subsession.cpp  ffmpeg_mpeg4_server_media_subsession.h  ffmpeg_pcm_server_media_subsession.cpp  ffmpeg_pcm_server_media_subsession.h  ffmpeg_rtsp_server.cpp  ffmpeg_rtsp_server.h  ffmpeg_server_demux.cpp  ffmpeg_server_demux.h  ffmpeg_server_media_subsession.h  media_server.cpp  pcm_FileSource.cpp  pcm_FileSource.hh  readme.txt
src/app/server2/: CMakeLists.txt  httpfileserver.cpp  httpfileserver.h  main.cpp
src/app/vedioServer/: DynamicRTSPServer.cpp  DynamicRTSPServer.hh
src/lib/: CMakeLists.txt
src/lib/UsageEnvironment/: CMakeLists.txt
src/lib/groupsock/: CMakeLists.txt
src/lib/liveMedia/: CMakeLists.txt
